src/styles/base.scss
@import './variables.scss';

html,
body {
  min-height: 100%;
  margin: 0;
  padding: 0;
}

body {
  background: $background-primary;
  background: linear-gradient(
    135deg,
    $background-primary 0%,
    $background-primary 60%,
    $background-secondary 100%
  );
  color: $text-primary;
  font-family: $font-serif;
  font-weight: $font-serif-regular;
  font-size: $font-size-base;
}

b,
strong {
  font-weight: $font-serif-strong;
}

.container {
  width: auto;
  padding: (2 * $base-padding) $base-padding (3 * $base-padding);
  margin: 0 auto;

  @media (min-width: $max-width) {
    width: $max-width - (2 * $base-padding);
  }
}

img {
  max-width: 100%;

  &.image-rounded {
    border-radius: 10px;
  }
}
p + img {
  margin-top: $base-margin;
}

.text-center {
  text-align: center !important;
}
.text-highlight {
  color: $brand-secondary;
}
.text-muted {
  color: $text-muted;
}
.text-lg {
  font-size: 1.15em;
}

.badge {
  background: fade_out($text-primary, 0.95);
  padding: 1px 10px;
  margin: 0 5px;
  border-radius: 5px;
  font-size: 0.9em;
}

.logo {
  max-width: 560px;
  margin: 40px auto;
  padding: 0 30px;
}

.content {
  margin: 40px 0;
}

/**
 * HEADERS & PARAGRAPHS
 */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $font-sans-serif;
  font-weight: $font-sans-serif-regular;
  text-transform: uppercase;
  letter-spacing: 0.15em;
}
h1 {
  font-size: 2rem;
}
h2 {
  font-size: 1.8rem;
}
h3 {
  font-size: 1.6rem;
}
h4 {
  font-size: 1.4rem;
}
h5 {
  font-size: 1.2rem;
}
h6 {
  font-size: 1rem;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: $base-margin 0 0;
}
h1 + p,
h2 + p,
h3 + p,
h4 + p,
h5 + p,
h6 + p {
  margin-top: $base-margin / 2;
}

/**
 * LINKS
 */
a {
  color: $text-primary;

  &:not(.btn):hover {
    opacity: 0.7;
  }

  .fa {
    vertical-align: middle;

    &:not(.fa-2x) {
      line-height: 2em;
    }
  }
}

/**
 * LISTS
 */
ul {
  padding-left: 30px;
}

ol.circles {
  list-style-type: none;
  margin: $base-margin 0 0;
  padding: 0;

  > li {
    $circle-size: 26px;
    $circle-offset: 34px;

    counter-increment: steps-counter;
    margin: 10px 0 0 $circle-offset;
    text-indent: -$circle-offset;

    &:before {
      content: counter(steps-counter);
      color: $text-alternative;
      background: $brand-primary;
      display: inline-block;
      width: $circle-size;
      height: $circle-size;
      line-height: $circle-size;
      text-indent: 0;
      text-align: center;
      margin-right: 8px;
      border-radius: $circle-size / 2;
      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);

      transform: scale(0.9);
      transition: transform $base-transition;
    }
    &:hover:before {
      transform: scale(1);
    }
  }
}

.fa-ul .fa-li {
  margin-top: 2px;
}

.image-aside {
  display: flex;
  align-items: flex-start;

  &:not(:first-child) {
    margin-top: $base-margin;
  }

  .image-aside__content {
    flex: 1;

    > :first-child {
      margin-top: 0;
    }
  }

  .image-aside__image {
    width: 280px;
    height: auto;
  }

  &--image-right .image-aside__image {
    margin-left: 20px;
  }
  &--image-left .image-aside__image {
    margin-right: 20px;
  }
}

